user chat and ui implemented

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,8 @@
     font-family: "Raleway", sans-serif;
   }
 }
+@layer utilities{
+  .chat-messages::-webkit-scrollbar {
+    display: none;
+}
+}
